refactor: replace all strings in PlomeCoreKit by L10n localized strings

--- a/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
+++ b/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
@@ -52,6 +52,7 @@
 "t_EPS" = "Terminale EPS";
 "t_history_geography" = "Terminale Histoire-géo";
 "t_EMC" = "Terminale EMC";
+"t_math" = "Terminale mathématique";
 
 "done" = "Terminé";
 "locale" = "FR-fr";
