--- a/Plome/Ressources/Localization/fr.lproj/Plome.strings
+++ b/Plome/Ressources/Localization/fr.lproj/Plome.strings
@@ -1,1 +1,44 @@
+"tabBar_home" = "Accueil";
+"tabBar_model" = "Modèles";
+"tabBar_settings" = "Réglages";
 
+"home.how_to_catchUp" = "Comment vous rattrapez ?";
+"home.you_will_obtain_your_diploma" = "Vous obtiendrez votre diplôme en obtenant des points supplémentaires:";
+"home.your_grade_will_be" = "Votre note sera alors de";
+
+"home.some_numbers" = "Quelques chiffres";
+"home.remake_simulation" = "Refaire une simulation";
+"home.edit_model_think_to_save" = "Vous avez modifié le modèle utilisé ? Pensez à l'enregistrer.";
+"home.save_model" = "Enregistrer ce modèle";
+"home.return_to_home" = "Retourner à l'accueil";
+"home.result" = "Résultat";
+
+"home.its_done" = "C'est fait !";
+"home.model_has_been_save" = "Le modèle à bien été enregistrer";
+"home.my_simulation" = "Ma simulation";
+
+"home.calculate" = "Calculer";
+"home.how_to_complete_simulation" = "Comment complétez la simulation ?";
+"home.simulation_rules" = "Voici les quelques règles pour bien faire votre simulation.\n\n1. Les nombres à décimaux s'écrivent avec des points.\n\n2. Les notes doivent être séparer avec un /.\n\n3. Si vous n'indiquez pas de coefficient, il sera automatiquement mis à 1 lors du calcul.";
+"home.how_named_your" = "Comment se nomme votre %@";
+
+"home.coeff" = "Coeff.";
+"home.grade" = "Note";
+"home.coeff_placeholder" = "1.0";
+"home.grade_placeholder" = "08/20";
+
+"home.select_a_model" = "Sélectionnez un modèle";
+"home.new_simulation" = "Nouvelle simulation";
+"home.empty_simulation_placeholder" = "Vous retrouverez ici toutes vos simulations d’examens.\n\nVous pouvez reprendre une existante pour la modifier.";
+"home.my_simulations" = "Mes simulations";
+
+"home.admit" = "Admis";
+"home.unadmit" = "Non admis";
+
+"home.your_grades" = "Vos notes";
+"home.remake_simulation_from_this_one" = "Re simuler à partir de cette simulation";
+"home.final_grade" = "Note final";
+
+"home.simulation_from_date" = "Simulation du %@";
+"home.worst_grade" = "Pire note";
+"home.best_grade" = "Meilleur note";
