feat: create swiftgen config file for Plome + generate L10n

--- a/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
+++ b/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
@@ -67,3 +67,5 @@
 "general.add" = "Ajouter";
 "general.oups" = "Oups";
 "general.common_error_message" = "Une erreur est survenue 😕";
+"general.warning" = "Attention";
+"general.save" = "Enregistrer";
