--- a/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/fr.lproj/PlomeCoreKit.strings
+++ b/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/fr.lproj/PlomeCoreKit.strings
@@ -66,3 +66,5 @@
 "general.add" = "Ajouter";
 "general.oups" = "Oups";
 "general.common_error_message" = "Une erreur est survenue 😕";
+"general.warning" = "Attention";
+"general.save" = "Enregistrer";
