feat: translate localized strings to english

--- a/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
+++ b/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
@@ -2,70 +2,70 @@
 "quite_well_mention" = "Quite well mention";
 "great_mention" = "Great mention";
 "very_great_mention" = "Very great mention";
-"disable_mention" = "Vous ne pouvez pas avoir de mention en dessous de la moyenne";
+"disable_mention" = "You cannot have a mention below the average";
 
-"success_admission" = "Vous êtes admis ! 🥳";
-"failure_admission" = "Vous n'êtes pas admis 😕";
+"success_admission" = "You are admitted! 🥳";
+"failure_admission" = "You are not admitted 😕";
 
-"success_result" = "Félicitation !";
-"failure_result" = "Oups...";
+"success_result" = "Congratulation !";
+"failure_result" = "Whoops...";
 
-"trials_type" = "Épreuve";
-"continuousControls_type" = "Contrôle continue";
-"options_type" = "Option";
+"trials_type" = "Trials";
+"continuousControls_type" = "Continuous controls";
+"options_type" = "Options";
 
 "brevet" = "Brevet";
 "general_BAC" = "BAC Général";
 "technological_BAC" = "BAC Technologique";
 
-"french_language" = "Langue française";
-"foreign_language" = "Langue étrangère";
-"scientist_language" = "Langages scientifiques";
-"art_language" = "Langages des arts";
-"learning_tools" = "Outils pour apprendre";
-"citizen_formation" = "Formation du citoyen";
-"natual_technologic_system" = "Systèmes naturels et techniques";
-"world_representation" = "Représentations du monde";
+"french_language" = "French language";
+"foreign_language" = "Foreign language";
+"scientist_language" = "Scientist language";
+"art_language" = "Arts language";
+"learning_tools" = "Learning tools";
+"citizen_formation" = "Citizen formation";
+"natual_technologic_system" = "Natural and technological system";
+"world_representation" = "World representation";
 
-"french" = "Français";
-"math" = "Mathématiques";
+"french" = "French";
+"math" = "Mathematics";
 "oral" = "Oral";
 "sciences" = "Sciences";
-"history_geography_EMC" = "Histoire-Géo-EMC";
+"history_geography_EMC" = "History-Geography-EMC";
 
-"french_writting" = "Français écrit";
-"french_oral" = "Français oral";
-"1_abandoned_speciality" = "1ère Spécialité abandonnée";
-"1_scientific_education" = "1ère Enseignement scientifique";
+"french_writting" = "French writting";
+"french_oral" = "French oral";
+"1_abandoned_speciality" = "1ère Abandonned speciality";
+"1_scientific_education" = "1ère Scientific education";
 "1_LVA" = "1ère LVA";
 "1_LVB" = "1ère LVB";
 "1_EPS" = "1ère EPS";
-"1_history_geography" = "1ère Histoire-géo";
+"1_history_geography" = "1ère History-geography";
 "1_EMC" = "1ère EMC";
 "grand_oral" = "Grand oral";
-"philosophy" = "Philosophie";
-"specialized_education_1" = "Enseignement spécialité 1";
-"specialized_education_2" = "Enseignement spécialité 2";
-"t_scientific_education" = "Terminale Enseignement scientifique";
+"philosophy" = "Philosophy";
+"specialized_education_1" = "Specialized education 1";
+"specialized_education_2" = "Specialized education 2";
+"t_scientific_education" = "Terminale scientific education";
 "t_LVA" = "Terminale LVA";
 "t_LVB" = "Terminale LVB";
 "t_EPS" = "Terminale EPS";
-"t_history_geography" = "Terminale Histoire-géo";
+"t_history_geography" = "Terminale History-geography";
 "t_EMC" = "Terminale EMC";
-"t_math" = "Terminale mathématique";
+"t_math" = "Terminale mathematics";
 
-"write_here" = "Ecrivez ici...";
-"unexpected" = "Oups, il y a eu un imprévu...";
+"write_here" = "Write here...";
+"unexpected" = "Whoops, there was an unexpected error...";
 
-"general.done" = "Terminé";
-"general.locale" = "FR-fr";
+"general.done" = "Done";
+"general.locale" = "En-en";
 "general.ok" = "Ok";
-"general.yes" = "Oui";
-"general.no" = "Non";
-"general.cancel" = "Annuler";
-"general.new" = "Nouveau";
-"general.add" = "Ajouter";
-"general.oups" = "Oups";
-"general.common_error_message" = "Une erreur est survenue 😕";
-"general.warning" = "Attention";
-"general.save" = "Enregistrer";
+"general.yes" = "Yes";
+"general.no" = "No";
+"general.cancel" = "Cancel";
+"general.new" = "New";
+"general.add" = "Add";
+"general.oups" = "Whoops";
+"general.common_error_message" = "An error has occurred 😕";
+"general.warning" = "Warning";
+"general.save" = "Save";
