feat: create and implement translations for onboarding

--- a/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
+++ b/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/en.lproj/PlomeCoreKit.strings
@@ -69,3 +69,5 @@
 "general.common_error_message" = "An error has occurred 😕";
 "general.warning" = "Warning";
 "general.save" = "Save";
+"general.skip" = "Skip";
+"general.next" = "Next";
