--- a/Plome/Ressources/Localization/fr.lproj/Plome.strings
+++ b/Plome/Ressources/Localization/fr.lproj/Plome.strings
@@ -83,3 +83,15 @@
 "simulationModels.number_of_trials" = "%d Epreuves";
 "simulationModels.number_of_continous_controls" = "%d Contrôles continue";
 "simulationModels.number_of_options" = "%d Options";
+
+// MARK: - Onboarding
+
+"onboarding.presentationTitle" = "Hello !";
+"onboarding.modelTitle" = "Créez tes modèles";
+"onboarding.simulationTitle" = "Fait des simulations";
+"onboarding.startTitle" = "Let's go !";
+
+"onboarding.presentationText" = "Bienvenue sur Plôme, l'application qui vous permet de simuler vos examens.";
+"onboarding.modelText" = "Créez vos propres modèles d'examen en plus de ce déjà disponible.";
+"onboarding.simulationText" = "Rentrez vos notes et coefficients pour avoir le résultat.";
+"onboarding.startText" = "Vous savez tout !";
