refactor: update translation

--- a/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/fr.lproj/PlomeCoreKit.strings
+++ b/Plome/PlomeCoreKit/PlomeCoreKit/Ressources/Localization/fr.lproj/PlomeCoreKit.strings
@@ -11,7 +11,7 @@
 "failure_result" = "Oups...";
 
 "trials_type" = "Épreuve";
-"continuousControls_type" = "Contrôle continue";
+"continuousControls_type" = "Contrôle continu";
 "options_type" = "Option";
 
 "brevet" = "Brevet";
