--- a/Plome/Ressources/Localization/en.lproj/Plome.strings
+++ b/Plome/Ressources/Localization/en.lproj/Plome.strings
@@ -84,6 +84,8 @@
 "simulationModels.number_of_continous_controls" = "%d Continuous controls";
 "simulationModels.number_of_options" = "%d Options";
 
+"simulationModels.sharing_code_message" = "Enter this code in the application settings to download the shared template. Warning, this code is only valid for 2 hours.";
+
 // MARK: - Onboarding
 
 "onboarding.presentationTitle" = "Hello !";
