--- a/Plome/Ressources/Localization/en.lproj/Plome.strings
+++ b/Plome/Ressources/Localization/en.lproj/Plome.strings
@@ -79,7 +79,7 @@
 // MARK: - Simulation models
 
 "simulationModels.new_model" = "New model";
-"simulationModels.empty_model_placeholder" = "Here you will find all your exam simulation templates.\n\nYou can use an existing one to modify it.\n\nYou will also find default templates in the application settings.";
+"simulationModels.empty_model_placeholder" = "Here you will find all your exam simulation models.\n\nYou can use an existing one to modify it.\n\nYou will also find default templates in the application settings.";
 
 "simulationModels.warning_message_remove_model" = "You are about to delete this model. Are you sure you want to delete it?";
 
@@ -90,7 +90,7 @@
 "simulationModels.number_of_options" = "%d Options";
 
 "simulationModels.sharing_code_message" = "Enter this code in the application settings to download the shared template. Warning, this code is only valid for 2 hours.";
-"simulationModels.download_model" = "Download a template";
+"simulationModels.download_model" = "Download a model";
 "simulationModels.write_code" = "Enter the code that was shared with you.";
 "simulationModels.success_download_title" = "That's good!";
 "simulationModels.success_download_message" = "The template has been added.";
